# landlockpp

./: .clang-tidy  .gitignore  .gitlab-ci.yml  CHANGELOG.md  README.md  meson.build
debian/: changelog  control  liblandlockpp-dev.install  liblandlockpp0.install  rules
include/ll/: ActionType.hpp  CodedType.hpp  Landlock.hpp  Rule.hpp  RuleType.hpp  Ruleset.hpp  Scope.hpp  coredefs.hpp  typing.hpp
meson/: meson.build
src/: ActionType.cpp  Landlock.cpp  Rule.cpp  Ruleset.cpp  meson.build
src/ll/: config.h.in  meson.build
test/: ActionTypeTest.cpp  CodedTypeTest.cpp  RuleTest.cpp  RulesetTest.cpp  meson.build  test.hpp.in  typingTest.cpp
